--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
-transformers @ git+https://github.com/huggingface/transformers
-bitsandbytes
-peft
-accelerate
-einops
-evaluate
-scikit-learn
-sentencepiece
-flash_attn
-protobuf==3.20.3
-deepspeed
+# Some needed for another repo. This is comprehensive.
+accelerate 
+backoff 
+bitsandbytes 
+chapterize 
+datasets 
+deepspeed 
+einops 
+evaluate 
+faiss-gpu 
+flash_attn 
+huggingface-hub 
+loguru 
+peft 
+protobuf==3.20.3 
+requests 
+scikit-learn 
+sentencepiece 
+tqdm 
+transformers 
 wandb
-huggingface-hub
+
